bin_PROGRAMS = iphuc

iphuc_SOURCES = main.cpp Shell.cpp Shell.h NormalInterface.cpp NormalInterface.h rldefs.h RestoreInterface.cpp RestoreInterface.h privateFunctions.cpp privateFunctions.h RecoveryInterface.cpp RecoveryInterface.h DFUInterface.cpp DFUInterface.h
iphuc_LDFLAGS = -framework CoreFoundation -F/System/Library/PrivateFrameworks -framework MobileDevice
